# tree-sitter-itch

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  stage.itch  test.itch  tree-sitter.json
bindings/c/: tree-sitter-itch.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_itch/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterItch/: itch.h
bindings/swift/TreeSitterItchTests/: TreeSitterItchTests.swift
itch.dylib.dSYM/Contents/: Info.plist
lua/tree-sitter-itch/: init.lua
queries/itch/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: fileDef.txt  segments.txt
