[package]
name = "tree-sitter-itch"
description = "A parser for Itch, a friendly textual language for making Scratch projects"
version = "0.1.0"
authors = ["Anthony Bullard"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "itch"]
categories = ["parsing", "text-editors"]
repository = "https://www.github.com/gamebox/tree-sitter-itch"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
